samples/negative/11_error_position_include_parse.pas
program n11;
(* $I samples/negative/bad_include_syntax.inc *)
begin
  WriteLn(1)
end.
