samples/negative/11_error_position_include_parse.stderr.expected
error: parse error at line 3, column 7:  --> 3:7
  |
3 |   K = ;
  |       ^---
  |
  = expected const_unary
